terraform/terragrunt/local/kind-argocd/apps/platform-gateway-routes/httproute-gitea.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gateway-routes
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: azure-auth-gateway
      namespace: azure-auth-gateway
      sectionName: https
  hostnames:
    - gitea.127.0.0.1.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: gitea-http
          namespace: gitea
          port: 3000
          weight: 1
