terraform/terragrunt/local/kind-argocd/apps/platform-gateway-routes/httproute-hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: gateway-routes
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: azure-auth-gateway
      namespace: azure-auth-gateway
      sectionName: https
  hostnames:
    - hubble.127.0.0.1.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui
          namespace: kube-system
          port: 80
          weight: 1
