terraform/terragrunt/local/kind-argocd/apps/platform-gateway-routes/httproute-keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: gateway-routes
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: azure-auth-gateway
      namespace: azure-auth-gateway
      sectionName: https
  hostnames:
    - login.127.0.0.1.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: http-to-https-redirect
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: keycloak-hostport
      backendRefs:
        - group: ""
          kind: Service
          name: keycloak
          namespace: azure-entraid-sim
          port: 8080
          weight: 1
