terraform/terragrunt/local/kind-argocd/apps/platform-gateway-routes/httproute-sentiment.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sentiment
  namespace: gateway-routes
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: azure-auth-gateway
      namespace: azure-auth-gateway
      sectionName: https
  hostnames:
    - sentiment.127.0.0.1.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: ""
          kind: Service
          name: sentiment-api
          namespace: sentiment-app
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sentiment-frontend
          namespace: sentiment-app
          port: 80
          weight: 1
